--- a/MakeRand.ipynb
+++ b/MakeRand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "    f = open(\"1000000_\"+str(i)+\".txt\",'w')\n",
     "\n",
     "    for j in range(1000000):\n",
-    "        f.write(str(np.random.randint(100000))+\"\\n\")\n",
+    "        f.write(str(np.random.randint(10000000))+\"\\n\")\n",
     "    \n",
     "    f.close()"
    ]
