--- a/B-Tree.ipynb
+++ b/B-Tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,18 @@
     "        self.root = Node(True)\n",
     "        self.t = t\n",
     "\n",
-    "    def printTree(self, x, lvl=0):\n",
+    "    def printTree(self, x, lists, lvl=0):\n",
     "        \"\"\"\n",
     "        Prints the complete B-Tree\n",
     "        :param x: Root node.\n",
     "        :param lvl: Current level.\n",
     "        \"\"\"\n",
-    "        print(lvl,\" \")\n",
+    "        #print(lvl,end=\" \")\n",
     "        lvl += 1\n",
     "        if len(x.children) > 0:\n",
     "            for i in x.children:\n",
-    "                self.printTree(i, lvl)\n",
+    "                self.printTree(i, lists, lvl)\n",
+    "        lists.append(lvl)\n",
     "\n",
     "    def search(self, k, x=None):\n",
     "        \"\"\"\n",
@@ -289,26 +290,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 번째 트리 생성 시간:  0.004544973373413086\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'printf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-56d31e02e013>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"번째 트리 생성 시간: \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprintTree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-12-91a4cfd1997b>\u001b[0m in \u001b[0;36mprintTree\u001b[1;34m(self, x, lvl)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;33m:\u001b[0m\u001b[0mparam\u001b[0m \u001b[0mlvl\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mCurrent\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \"\"\"\n\u001b[1;32m---> 26\u001b[1;33m         \u001b[0mprintf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlvl\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m         \u001b[0mlvl\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'printf' is not defined"
+      "1 번째 트리 생성 시간:  0.0029909610748291016\n",
+      "1 번째 트리 높이:  4\n",
+      "\n",
+      "1 - 1 번째 탐색, 찾는 숫자 45982 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 35702 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 49985 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 99413 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 65022 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "2 번째 트리 생성 시간:  0.003966569900512695\n",
+      "2 번째 트리 높이:  4\n",
+      "\n",
+      "2 - 1 번째 탐색, 찾는 숫자 66067 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 78067 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 19298 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 11742 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 90108 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "3 번째 트리 생성 시간:  0.0029909610748291016\n",
+      "3 번째 트리 높이:  4\n",
+      "\n",
+      "3 - 1 번째 탐색, 찾는 숫자 27563 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 56508 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 93776 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 96400 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 40229 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "4 번째 트리 생성 시간:  0.005011081695556641\n",
+      "4 번째 트리 높이:  4\n",
+      "\n",
+      "4 - 1 번째 탐색, 찾는 숫자 66396 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 64403 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 9043 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 71347 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 77493 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "5 번째 트리 생성 시간:  0.0030176639556884766\n",
+      "5 번째 트리 높이:  4\n",
+      "\n",
+      "5 - 1 번째 탐색, 찾는 숫자 64198 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 39857 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 5633 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 45184 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 37826 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "6 번째 트리 생성 시간:  0.0029916763305664062\n",
+      "6 번째 트리 높이:  4\n",
+      "\n",
+      "6 - 1 번째 탐색, 찾는 숫자 43897 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 46606 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 2776 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 39856 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 15205 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "7 번째 트리 생성 시간:  0.003021240234375\n",
+      "7 번째 트리 높이:  4\n",
+      "\n",
+      "7 - 1 번째 탐색, 찾는 숫자 47936 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 90456 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 25396 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 55645 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 6749 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "8 번째 트리 생성 시간:  0.003026247024536133\n",
+      "8 번째 트리 높이:  4\n",
+      "\n",
+      "8 - 1 번째 탐색, 찾는 숫자 10494 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 21860 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 76141 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 86444 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 82913 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "9 번째 트리 생성 시간:  0.0020275115966796875\n",
+      "9 번째 트리 높이:  4\n",
+      "\n",
+      "9 - 1 번째 탐색, 찾는 숫자 86313 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 61920 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 37917 탐색+삭제 시간: 0.0010023117065429688\n",
+      "9 - 4 번째 탐색, 찾는 숫자 18333 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 58056 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "10 번째 트리 생성 시간:  0.002032041549682617\n",
+      "10 번째 트리 높이:  4\n",
+      "\n",
+      "10 - 1 번째 탐색, 찾는 숫자 30842 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 29848 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 65290 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 53712 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 65546 탐색+삭제 시간: 0.0\n",
+      "\n"
      ]
     }
    ],
@@ -316,11 +394,12 @@
     "import time\n",
     "import numpy as np\n",
     "\n",
-    "t = BTree(5)\n",
-    "\n",
     "NUM = 1000\n",
     "\n",
     "for i in range(10):\n",
+    "\n",
+    "    t = BTree(5)\n",
+    "    lists = []\n",
     "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
     "    nums = []\n",
     "    lines = f.readlines()\n",
@@ -329,13 +408,13 @@
     "\n",
     "    start = time.time()\n",
     "    \n",
-    "    for i in range(NUM):\n",
-    "        t.insert((i, nums[i]))\n",
+    "    for num in range(NUM):\n",
+    "        t.insert((num, nums[num]))\n",
     "    \n",
     "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
-    "    t.printTree(t.root)\n",
+    "    t.printTree(t.root,lists)\n",
+    "    print(i+1,\"번째 트리 높이: \", max(lists))\n",
     "    print()\n",
-    "    \n",
     "    for j in range(5):\n",
     "        start = time.time()\n",
     "        randNum = nums[np.random.randint(NUM)]\n",
