--- a/BinTree.ipynb
+++ b/BinTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,93 +427,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 번째 트리 생성 시간:  1.0897705554962158\n",
+      "1 번째 트리 생성 시간:  2.6376733779907227\n",
       "1 번째 트리 높이:  44\n",
-      "1 - 1 번째 탐색, 찾는 숫자 3899369 탐색+삭제 시간: 0.0\n",
-      "1 - 2 번째 탐색, 찾는 숫자 842533 탐색+삭제 시간: 0.0\n",
-      "1 - 3 번째 탐색, 찾는 숫자 920447 탐색+삭제 시간: 0.0\n",
-      "1 - 4 번째 탐색, 찾는 숫자 966305 탐색+삭제 시간: 0.0\n",
-      "1 - 5 번째 탐색, 찾는 숫자 9072868 탐색+삭제 시간: 0.0\n",
+      "1 - 1 번째 탐색, 찾는 숫자 8715432 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 8076607 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 3728503 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 7238464 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 7341089 탐색+삭제 시간: 0.0\n",
       "\n",
-      "2 번째 트리 생성 시간:  1.0982201099395752\n",
+      "2 번째 트리 생성 시간:  1.0030176639556885\n",
       "2 번째 트리 높이:  44\n",
-      "2 - 1 번째 탐색, 찾는 숫자 18930 탐색+삭제 시간: 0.0\n",
-      "2 - 2 번째 탐색, 찾는 숫자 2799805 탐색+삭제 시간: 0.0\n",
-      "2 - 3 번째 탐색, 찾는 숫자 4440967 탐색+삭제 시간: 0.0010051727294921875\n",
-      "2 - 4 번째 탐색, 찾는 숫자 3342261 탐색+삭제 시간: 0.0\n",
-      "2 - 5 번째 탐색, 찾는 숫자 4047940 탐색+삭제 시간: 0.0\n",
+      "2 - 1 번째 탐색, 찾는 숫자 8707809 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 1145187 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 5703798 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 2311977 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 8916626 탐색+삭제 시간: 0.0\n",
       "\n",
-      "3 번째 트리 생성 시간:  1.1992948055267334\n",
+      "3 번째 트리 생성 시간:  0.9826045036315918\n",
       "3 번째 트리 높이:  40\n",
-      "3 - 1 번째 탐색, 찾는 숫자 9838442 탐색+삭제 시간: 0.0\n",
-      "3 - 2 번째 탐색, 찾는 숫자 6891577 탐색+삭제 시간: 0.0\n",
-      "3 - 3 번째 탐색, 찾는 숫자 9333379 탐색+삭제 시간: 0.0\n",
-      "3 - 4 번째 탐색, 찾는 숫자 1582296 탐색+삭제 시간: 0.0\n",
-      "3 - 5 번째 탐색, 찾는 숫자 7378686 탐색+삭제 시간: 0.0009982585906982422\n",
+      "3 - 1 번째 탐색, 찾는 숫자 4111658 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 9654463 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 3264673 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 5551378 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 294924 탐색+삭제 시간: 0.0\n",
       "\n",
-      "4 번째 트리 생성 시간:  0.973320484161377\n",
+      "4 번째 트리 생성 시간:  0.9505670070648193\n",
       "4 번째 트리 높이:  48\n",
-      "4 - 1 번째 탐색, 찾는 숫자 4314207 탐색+삭제 시간: 0.0\n",
-      "4 - 2 번째 탐색, 찾는 숫자 9860484 탐색+삭제 시간: 0.0\n",
-      "4 - 3 번째 탐색, 찾는 숫자 8330485 탐색+삭제 시간: 0.0\n",
-      "4 - 4 번째 탐색, 찾는 숫자 659927 탐색+삭제 시간: 0.0\n",
-      "4 - 5 번째 탐색, 찾는 숫자 6057281 탐색+삭제 시간: 0.0\n",
+      "4 - 1 번째 탐색, 찾는 숫자 8065880 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 4607059 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 6946294 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 4056225 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 4372716 탐색+삭제 시간: 0.0\n",
       "\n",
-      "5 번째 트리 생성 시간:  0.9517123699188232\n",
+      "5 번째 트리 생성 시간:  1.0790412425994873\n",
       "5 번째 트리 높이:  42\n",
-      "5 - 1 번째 탐색, 찾는 숫자 1016723 탐색+삭제 시간: 0.0\n",
-      "5 - 2 번째 탐색, 찾는 숫자 7582143 탐색+삭제 시간: 0.0\n",
-      "5 - 3 번째 탐색, 찾는 숫자 2884485 탐색+삭제 시간: 0.0\n",
-      "5 - 4 번째 탐색, 찾는 숫자 928713 탐색+삭제 시간: 0.0\n",
-      "5 - 5 번째 탐색, 찾는 숫자 6406654 탐색+삭제 시간: 0.0\n",
+      "5 - 1 번째 탐색, 찾는 숫자 7309099 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 9571624 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 5365277 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 6681364 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 5537542 탐색+삭제 시간: 0.0\n",
       "\n",
-      "6 번째 트리 생성 시간:  1.0779497623443604\n",
+      "6 번째 트리 생성 시간:  0.9006180763244629\n",
       "6 번째 트리 높이:  41\n",
-      "6 - 1 번째 탐색, 찾는 숫자 6870294 탐색+삭제 시간: 0.0\n",
-      "6 - 2 번째 탐색, 찾는 숫자 3292221 탐색+삭제 시간: 0.0\n",
-      "6 - 3 번째 탐색, 찾는 숫자 5819829 탐색+삭제 시간: 0.0\n",
-      "6 - 4 번째 탐색, 찾는 숫자 1360093 탐색+삭제 시간: 0.0\n",
-      "6 - 5 번째 탐색, 찾는 숫자 935296 탐색+삭제 시간: 0.0\n",
+      "6 - 1 번째 탐색, 찾는 숫자 3088977 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 6832505 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 2347622 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 8444189 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 4366021 탐색+삭제 시간: 0.0\n",
       "\n",
-      "7 번째 트리 생성 시간:  0.9239590167999268\n",
+      "7 번째 트리 생성 시간:  0.9731221199035645\n",
       "7 번째 트리 높이:  39\n",
-      "7 - 1 번째 탐색, 찾는 숫자 2028896 탐색+삭제 시간: 0.0\n",
-      "7 - 2 번째 탐색, 찾는 숫자 1749222 탐색+삭제 시간: 0.0\n",
-      "7 - 3 번째 탐색, 찾는 숫자 2921517 탐색+삭제 시간: 0.0\n",
-      "7 - 4 번째 탐색, 찾는 숫자 7738854 탐색+삭제 시간: 0.0\n",
-      "7 - 5 번째 탐색, 찾는 숫자 4175683 탐색+삭제 시간: 0.0\n",
+      "7 - 1 번째 탐색, 찾는 숫자 2490875 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 2701516 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 9049238 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 1946731 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 729055 탐색+삭제 시간: 0.0\n",
       "\n",
-      "8 번째 트리 생성 시간:  0.9448752403259277\n",
+      "8 번째 트리 생성 시간:  1.2363991737365723\n",
       "8 번째 트리 높이:  40\n",
-      "8 - 1 번째 탐색, 찾는 숫자 2074605 탐색+삭제 시간: 0.0\n",
-      "8 - 2 번째 탐색, 찾는 숫자 4176959 탐색+삭제 시간: 0.0\n",
-      "8 - 3 번째 탐색, 찾는 숫자 5436532 탐색+삭제 시간: 0.0\n",
-      "8 - 4 번째 탐색, 찾는 숫자 4842281 탐색+삭제 시간: 0.0\n",
-      "8 - 5 번째 탐색, 찾는 숫자 7982516 탐색+삭제 시간: 0.0\n",
+      "8 - 1 번째 탐색, 찾는 숫자 8077982 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 6720833 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 476867 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 7123401 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 9983934 탐색+삭제 시간: 0.0\n",
       "\n",
-      "9 번째 트리 생성 시간:  0.9315061569213867\n",
+      "9 번째 트리 생성 시간:  1.1232078075408936\n",
       "9 번째 트리 높이:  38\n",
-      "9 - 1 번째 탐색, 찾는 숫자 9467170 탐색+삭제 시간: 0.0\n",
-      "9 - 2 번째 탐색, 찾는 숫자 8253330 탐색+삭제 시간: 0.0\n",
-      "9 - 3 번째 탐색, 찾는 숫자 2532334 탐색+삭제 시간: 0.0\n",
-      "9 - 4 번째 탐색, 찾는 숫자 3736149 탐색+삭제 시간: 0.0\n",
-      "9 - 5 번째 탐색, 찾는 숫자 893858 탐색+삭제 시간: 0.0\n",
+      "9 - 1 번째 탐색, 찾는 숫자 2498426 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 1247803 탐색+삭제 시간: 0.0009629726409912109\n",
+      "9 - 3 번째 탐색, 찾는 숫자 3145236 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 1811175 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 3233496 탐색+삭제 시간: 0.0\n",
       "\n",
-      "10 번째 트리 생성 시간:  0.938286542892456\n",
+      "10 번째 트리 생성 시간:  1.1096258163452148\n",
       "10 번째 트리 높이:  38\n",
-      "10 - 1 번째 탐색, 찾는 숫자 3693684 탐색+삭제 시간: 0.0\n",
-      "10 - 2 번째 탐색, 찾는 숫자 235694 탐색+삭제 시간: 0.0\n",
-      "10 - 3 번째 탐색, 찾는 숫자 7048084 탐색+삭제 시간: 0.0\n",
-      "10 - 4 번째 탐색, 찾는 숫자 7127658 탐색+삭제 시간: 0.0\n",
-      "10 - 5 번째 탐색, 찾는 숫자 3078385 탐색+삭제 시간: 0.0\n",
-      "\n"
+      "10 - 1 번째 탐색, 찾는 숫자 9289664 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 6594824 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 4690372 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 3445383 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 5040772 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "1.1217306137084961\n",
+      "41.4\n"
      ]
     }
    ],
@@ -523,7 +525,8 @@
     "\n",
     "\n",
     "NUM = 100000\n",
-    "\n",
+    "timeSum = []\n",
+    "heightSum = []\n",
     "for i in range(10):\n",
     "    t = binary_search_tree()\n",
     "    f = open(str(NUM)+\"_\"+str(i)+\".txt\",'r')\n",
@@ -535,6 +538,8 @@
     "    start = time.time()\n",
     "    for num in nums:\n",
     "        t.insert(num)\n",
+    "    timeSum.append(time.time() - start)\n",
+    "    heightSum.append(t.height())\n",
     "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
     "    print(i+1,\"번째 트리 높이: \",t.height())\n",
     "    \n",
@@ -546,98 +551,106 @@
     "    \n",
     "    print()\n",
     "    \n",
-    "    f.close()"
+    "    f.close()\n",
+    "\n",
+    "\n",
+    "print(np.mean(timeSum))\n",
+    "print(np.mean(heightSum))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 번째 트리 생성 시간:  13.562924146652222\n",
+      "nan\n",
+      "nan\n",
+      "1 번째 트리 생성 시간:  17.704874277114868\n",
       "1 번째 트리 높이:  55\n",
-      "1 - 1 번째 탐색, 찾는 숫자 5867587 탐색+삭제 시간: 0.0\n",
-      "1 - 2 번째 탐색, 찾는 숫자 8159329 탐색+삭제 시간: 0.0\n",
-      "1 - 3 번째 탐색, 찾는 숫자 8947291 탐색+삭제 시간: 0.0\n",
-      "1 - 4 번째 탐색, 찾는 숫자 4449200 탐색+삭제 시간: 0.0\n",
-      "1 - 5 번째 탐색, 찾는 숫자 3864626 탐색+삭제 시간: 0.0\n",
+      "1 - 1 번째 탐색, 찾는 숫자 9677558 탐색+삭제 시간: 0.0\n",
+      "1 - 2 번째 탐색, 찾는 숫자 3266211 탐색+삭제 시간: 0.0\n",
+      "1 - 3 번째 탐색, 찾는 숫자 3793027 탐색+삭제 시간: 0.0\n",
+      "1 - 4 번째 탐색, 찾는 숫자 5870278 탐색+삭제 시간: 0.0\n",
+      "1 - 5 번째 탐색, 찾는 숫자 3243118 탐색+삭제 시간: 0.0\n",
       "\n",
-      "2 번째 트리 생성 시간:  13.756475925445557\n",
+      "2 번째 트리 생성 시간:  17.447664260864258\n",
       "2 번째 트리 높이:  47\n",
-      "2 - 1 번째 탐색, 찾는 숫자 3429463 탐색+삭제 시간: 0.0\n",
-      "2 - 2 번째 탐색, 찾는 숫자 1884938 탐색+삭제 시간: 0.0\n",
-      "2 - 3 번째 탐색, 찾는 숫자 5653255 탐색+삭제 시간: 0.0\n",
-      "2 - 4 번째 탐색, 찾는 숫자 9505400 탐색+삭제 시간: 0.0\n",
-      "2 - 5 번째 탐색, 찾는 숫자 8298733 탐색+삭제 시간: 0.0\n",
+      "2 - 1 번째 탐색, 찾는 숫자 2694336 탐색+삭제 시간: 0.0\n",
+      "2 - 2 번째 탐색, 찾는 숫자 2015008 탐색+삭제 시간: 0.0\n",
+      "2 - 3 번째 탐색, 찾는 숫자 8902071 탐색+삭제 시간: 0.0\n",
+      "2 - 4 번째 탐색, 찾는 숫자 2107447 탐색+삭제 시간: 0.0\n",
+      "2 - 5 번째 탐색, 찾는 숫자 9292115 탐색+삭제 시간: 0.0\n",
       "\n",
-      "3 번째 트리 생성 시간:  13.65889310836792\n",
+      "3 번째 트리 생성 시간:  15.824125051498413\n",
       "3 번째 트리 높이:  48\n",
-      "3 - 1 번째 탐색, 찾는 숫자 917908 탐색+삭제 시간: 0.0\n",
-      "3 - 2 번째 탐색, 찾는 숫자 2060903 탐색+삭제 시간: 0.0\n",
-      "3 - 3 번째 탐색, 찾는 숫자 6146523 탐색+삭제 시간: 0.0\n",
-      "3 - 4 번째 탐색, 찾는 숫자 7854631 탐색+삭제 시간: 0.0\n",
-      "3 - 5 번째 탐색, 찾는 숫자 8745477 탐색+삭제 시간: 0.0\n",
+      "3 - 1 번째 탐색, 찾는 숫자 5540230 탐색+삭제 시간: 0.0\n",
+      "3 - 2 번째 탐색, 찾는 숫자 8049454 탐색+삭제 시간: 0.0\n",
+      "3 - 3 번째 탐색, 찾는 숫자 686967 탐색+삭제 시간: 0.0\n",
+      "3 - 4 번째 탐색, 찾는 숫자 6982358 탐색+삭제 시간: 0.0\n",
+      "3 - 5 번째 탐색, 찾는 숫자 6115005 탐색+삭제 시간: 0.0\n",
       "\n",
-      "4 번째 트리 생성 시간:  13.633134841918945\n",
+      "4 번째 트리 생성 시간:  19.49443221092224\n",
       "4 번째 트리 높이:  48\n",
-      "4 - 1 번째 탐색, 찾는 숫자 3698294 탐색+삭제 시간: 0.0\n",
-      "4 - 2 번째 탐색, 찾는 숫자 9373790 탐색+삭제 시간: 0.0\n",
-      "4 - 3 번째 탐색, 찾는 숫자 7530266 탐색+삭제 시간: 0.0\n",
-      "4 - 4 번째 탐색, 찾는 숫자 6737715 탐색+삭제 시간: 0.0\n",
-      "4 - 5 번째 탐색, 찾는 숫자 2202484 탐색+삭제 시간: 0.0\n",
+      "4 - 1 번째 탐색, 찾는 숫자 6369822 탐색+삭제 시간: 0.0\n",
+      "4 - 2 번째 탐색, 찾는 숫자 1494805 탐색+삭제 시간: 0.0\n",
+      "4 - 3 번째 탐색, 찾는 숫자 6951919 탐색+삭제 시간: 0.0\n",
+      "4 - 4 번째 탐색, 찾는 숫자 6387744 탐색+삭제 시간: 0.0\n",
+      "4 - 5 번째 탐색, 찾는 숫자 3068088 탐색+삭제 시간: 0.0\n",
       "\n",
-      "5 번째 트리 생성 시간:  15.308260679244995\n",
+      "5 번째 트리 생성 시간:  17.58405876159668\n",
       "5 번째 트리 높이:  49\n",
-      "5 - 1 번째 탐색, 찾는 숫자 8344200 탐색+삭제 시간: 0.0\n",
-      "5 - 2 번째 탐색, 찾는 숫자 4410643 탐색+삭제 시간: 0.0\n",
-      "5 - 3 번째 탐색, 찾는 숫자 8051309 탐색+삭제 시간: 0.0\n",
-      "5 - 4 번째 탐색, 찾는 숫자 7281404 탐색+삭제 시간: 0.0\n",
-      "5 - 5 번째 탐색, 찾는 숫자 9448503 탐색+삭제 시간: 0.0\n",
+      "5 - 1 번째 탐색, 찾는 숫자 6145137 탐색+삭제 시간: 0.0\n",
+      "5 - 2 번째 탐색, 찾는 숫자 2531666 탐색+삭제 시간: 0.0\n",
+      "5 - 3 번째 탐색, 찾는 숫자 4019596 탐색+삭제 시간: 0.0\n",
+      "5 - 4 번째 탐색, 찾는 숫자 470149 탐색+삭제 시간: 0.0\n",
+      "5 - 5 번째 탐색, 찾는 숫자 9294063 탐색+삭제 시간: 0.0\n",
       "\n",
-      "6 번째 트리 생성 시간:  14.101975202560425\n",
+      "6 번째 트리 생성 시간:  19.617541551589966\n",
       "6 번째 트리 높이:  49\n",
-      "6 - 1 번째 탐색, 찾는 숫자 8256240 탐색+삭제 시간: 0.0\n",
-      "6 - 2 번째 탐색, 찾는 숫자 6854301 탐색+삭제 시간: 0.0\n",
-      "6 - 3 번째 탐색, 찾는 숫자 26398 탐색+삭제 시간: 0.0\n",
-      "6 - 4 번째 탐색, 찾는 숫자 313757 탐색+삭제 시간: 0.0\n",
-      "6 - 5 번째 탐색, 찾는 숫자 8672202 탐색+삭제 시간: 0.0\n",
+      "6 - 1 번째 탐색, 찾는 숫자 1757671 탐색+삭제 시간: 0.0\n",
+      "6 - 2 번째 탐색, 찾는 숫자 6421171 탐색+삭제 시간: 0.0\n",
+      "6 - 3 번째 탐색, 찾는 숫자 4906314 탐색+삭제 시간: 0.0\n",
+      "6 - 4 번째 탐색, 찾는 숫자 273123 탐색+삭제 시간: 0.0\n",
+      "6 - 5 번째 탐색, 찾는 숫자 8999148 탐색+삭제 시간: 0.0\n",
       "\n",
-      "7 번째 트리 생성 시간:  15.520395278930664\n",
+      "7 번째 트리 생성 시간:  21.354477167129517\n",
       "7 번째 트리 높이:  52\n",
-      "7 - 1 번째 탐색, 찾는 숫자 5004677 탐색+삭제 시간: 0.0\n",
-      "7 - 2 번째 탐색, 찾는 숫자 2285679 탐색+삭제 시간: 0.0\n",
-      "7 - 3 번째 탐색, 찾는 숫자 3164739 탐색+삭제 시간: 0.0\n",
-      "7 - 4 번째 탐색, 찾는 숫자 4187078 탐색+삭제 시간: 0.0\n",
-      "7 - 5 번째 탐색, 찾는 숫자 9486183 탐색+삭제 시간: 0.0\n",
+      "7 - 1 번째 탐색, 찾는 숫자 8504515 탐색+삭제 시간: 0.0\n",
+      "7 - 2 번째 탐색, 찾는 숫자 6240739 탐색+삭제 시간: 0.0\n",
+      "7 - 3 번째 탐색, 찾는 숫자 2688706 탐색+삭제 시간: 0.0\n",
+      "7 - 4 번째 탐색, 찾는 숫자 4208726 탐색+삭제 시간: 0.0\n",
+      "7 - 5 번째 탐색, 찾는 숫자 3038168 탐색+삭제 시간: 0.0\n",
       "\n",
-      "8 번째 트리 생성 시간:  13.97749376296997\n",
+      "8 번째 트리 생성 시간:  15.683081865310669\n",
       "8 번째 트리 높이:  49\n",
-      "8 - 1 번째 탐색, 찾는 숫자 4106594 탐색+삭제 시간: 0.0\n",
-      "8 - 2 번째 탐색, 찾는 숫자 8236980 탐색+삭제 시간: 0.0\n",
-      "8 - 3 번째 탐색, 찾는 숫자 8507157 탐색+삭제 시간: 0.0\n",
-      "8 - 4 번째 탐색, 찾는 숫자 4860107 탐색+삭제 시간: 0.0\n",
-      "8 - 5 번째 탐색, 찾는 숫자 7790063 탐색+삭제 시간: 0.0\n",
+      "8 - 1 번째 탐색, 찾는 숫자 1307102 탐색+삭제 시간: 0.0\n",
+      "8 - 2 번째 탐색, 찾는 숫자 8862064 탐색+삭제 시간: 0.0\n",
+      "8 - 3 번째 탐색, 찾는 숫자 668095 탐색+삭제 시간: 0.0\n",
+      "8 - 4 번째 탐색, 찾는 숫자 4327440 탐색+삭제 시간: 0.0\n",
+      "8 - 5 번째 탐색, 찾는 숫자 2360001 탐색+삭제 시간: 0.0\n",
       "\n",
-      "9 번째 트리 생성 시간:  14.130328178405762\n",
+      "9 번째 트리 생성 시간:  17.89881944656372\n",
       "9 번째 트리 높이:  53\n",
-      "9 - 1 번째 탐색, 찾는 숫자 3302418 탐색+삭제 시간: 0.0\n",
-      "9 - 2 번째 탐색, 찾는 숫자 4358732 탐색+삭제 시간: 0.0\n",
-      "9 - 3 번째 탐색, 찾는 숫자 9308019 탐색+삭제 시간: 0.0\n",
-      "9 - 4 번째 탐색, 찾는 숫자 5847337 탐색+삭제 시간: 0.0\n",
-      "9 - 5 번째 탐색, 찾는 숫자 1770644 탐색+삭제 시간: 0.0\n",
+      "9 - 1 번째 탐색, 찾는 숫자 4025296 탐색+삭제 시간: 0.0\n",
+      "9 - 2 번째 탐색, 찾는 숫자 1694365 탐색+삭제 시간: 0.0\n",
+      "9 - 3 번째 탐색, 찾는 숫자 2703241 탐색+삭제 시간: 0.0\n",
+      "9 - 4 번째 탐색, 찾는 숫자 7700245 탐색+삭제 시간: 0.0\n",
+      "9 - 5 번째 탐색, 찾는 숫자 7870458 탐색+삭제 시간: 0.0\n",
       "\n",
-      "10 번째 트리 생성 시간:  15.093132495880127\n",
+      "10 번째 트리 생성 시간:  17.720387935638428\n",
       "10 번째 트리 높이:  52\n",
-      "10 - 1 번째 탐색, 찾는 숫자 2018639 탐색+삭제 시간: 0.0\n",
-      "10 - 2 번째 탐색, 찾는 숫자 8447538 탐색+삭제 시간: 0.0\n",
-      "10 - 3 번째 탐색, 찾는 숫자 2098355 탐색+삭제 시간: 0.0\n",
-      "10 - 4 번째 탐색, 찾는 숫자 1253491 탐색+삭제 시간: 0.0\n",
-      "10 - 5 번째 탐색, 찾는 숫자 3779421 탐색+삭제 시간: 0.0\n",
-      "\n"
+      "10 - 1 번째 탐색, 찾는 숫자 8512063 탐색+삭제 시간: 0.0\n",
+      "10 - 2 번째 탐색, 찾는 숫자 5960382 탐색+삭제 시간: 0.0\n",
+      "10 - 3 번째 탐색, 찾는 숫자 213119 탐색+삭제 시간: 0.0\n",
+      "10 - 4 번째 탐색, 찾는 숫자 683038 탐색+삭제 시간: 0.0\n",
+      "10 - 5 번째 탐색, 찾는 숫자 3343171 탐색+삭제 시간: 0.0\n",
+      "\n",
+      "17.24200232028961\n",
+      "50.2\n"
      ]
     }
    ],
@@ -646,6 +659,8 @@
     "import numpy as np\n",
     "\n",
     "NUM = 1000000\n",
+    "timeSum = []\n",
+    "heightSum = []\n",
     "\n",
     "for i in range(10):\n",
     "    t = binary_search_tree()\n",
@@ -658,6 +673,8 @@
     "    start = time.time()\n",
     "    for num in nums:\n",
     "        t.insert(num)\n",
+    "    timeSum.append(time.time() - start)\n",
+    "    heightSum.append(t.height())\n",
     "    print(i+1,\"번째 트리 생성 시간: \",time.time() - start)\n",
     "    print(i+1,\"번째 트리 높이: \",t.height())\n",
     "    \n",
@@ -669,7 +686,11 @@
     "    \n",
     "    print()\n",
     "    \n",
-    "    f.close()"
+    "    f.close()\n",
+    "    \n",
+    "\n",
+    "print(np.mean(timeSum))\n",
+    "print(np.mean(heightSum))"
    ]
   }
  ],
